@@ -1,0 +1,11 @@
+/* -----------------------------------------------------------------------
+   See COPYRIGHT.TXT and LICENSE.TXT for copyright and license information
+   ----------------------------------------------------------------------- */
+#ifndef _compiler_warnings_h_
+#define _compiler_warnings_h_
+
+#include "plm_config.h"
+
+#define SUPPRESS_UNUSED_VARIABLE_WARNING(a) ((void) a)
+
+#endif
