@@ -4,6 +4,7 @@
 #include "plm_config.h"
 #include <stdlib.h>
 #include <stdio.h>
+#include "compiler_warnings.h"
 #include "plm_timer.h"
 
 static double
@@ -17,6 +18,7 @@ plm_timer_get_time (Plm_timer *timer)
     struct timeval tv;
     int rc;
     rc = gettimeofday (&tv, 0);
+    SUPPRESS_UNUSED_VARIABLE_WARNING (rc);
     return ((double) tv.tv_sec) + ((double) tv.tv_usec) / 1000000.;
 #endif
 }
